feat(plugin): Embed icon, documentation and addtional information for plugin
Closes gravitee-io/issues#4123

--- a/src/main/resources/plugin.properties
+++ b/src/main/resources/plugin.properties
@@ -4,3 +4,5 @@ version=${project.version}
 description=${project.description}
 class=io.gravitee.policy.jws.JWSPolicy
 type=policy
+category=security
+icon=jws.svg
