--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
     <version>1.4.0</version>
 
     <name>Gravitee.io APIM - Policy - JWS</name>
-    <description>Description of the JWS Gravitee Policy</description>
+    <description>Validate the JWS token signature, certificate information and expiration date before sending the API call to the target backend</description>
 
     <parent>
         <groupId>io.gravitee</groupId>
