--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
         <jaxb-api.version>2.3.1</jaxb-api.version>
 
         <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
+        <maven-plugin-properties.version>1.2.1</maven-plugin-properties.version>
         <publish-folder-path>graviteeio-apim/plugins/policies</publish-folder-path>
     </properties>
 
@@ -175,7 +176,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>properties-maven-plugin</artifactId>
-                <version>1.2.1</version>
+                <version>${maven-plugin-properties.version}</version>
                 <executions>
                     <execution>
                         <phase>initialize</phase>
