--- a/pom.xml
+++ b/pom.xml
@@ -36,14 +36,13 @@
     <properties>
         <gravitee-apim.version>4.6.0-alpha.3</gravitee-apim.version>
         <gravitee-reactor-message.version>5.0.0</gravitee-reactor-message.version>
-        <gravitee-common.version>2.3.0</gravitee-common.version>
         <jjwt.version>0.9.1</jjwt.version>
-        <bcprov-jdk18on.version>1.78</bcprov-jdk18on.version>
         <jsonassert.version>1.5.3</jsonassert.version>
         <jaxb-api.version>2.3.1</jaxb-api.version>
 
         <maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
         <maven-plugin-properties.version>1.2.1</maven-plugin-properties.version>
+
         <publish-folder-path>graviteeio-apim/plugins/policies</publish-folder-path>
     </properties>
 
@@ -105,8 +104,9 @@
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcprov-jdk18on</artifactId>
-            <version>${bcprov-jdk18on.version}</version>
-            <scope>compile</scope>
+            <version>[1.78,)</version>
+            <!-- GW already provides this dependency -->
+            <scope>provided</scope>
         </dependency>
 
         <!-- Logging -->
@@ -163,6 +163,12 @@
             <groupId>com.graviteesource.reactor</groupId>
             <artifactId>gravitee-reactor-message</artifactId>
             <version>${gravitee-reactor-message.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.gravitee.apim.plugin.entrypoint</groupId>
+            <artifactId>gravitee-apim-plugin-entrypoint-http-proxy</artifactId>
+            <version>${gravitee-apim.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
