--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,7 @@
     </parent>
 
     <properties>
-        <gravitee-apim.version>4.6.0-alpha.3</gravitee-apim.version>
+        <gravitee-apim.version>4.6.0</gravitee-apim.version>
         <gravitee-reactor-message.version>5.0.0</gravitee-reactor-message.version>
         <jjwt.version>0.9.1</jjwt.version>
         <jsonassert.version>1.5.3</jsonassert.version>
